--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <!----------------Barra de navegación ------------------>
     <nav>
-      <a href=""><h1>WebStudio</h1></a>
+      <a href=""><h3>WebStudio</h3></a>
       <a href="">Estudio</a>
       <a href="">Portafolio</a>
       <a href="">Contactos</a>
@@ -20,7 +20,7 @@
     <a href="">+52 55 5529 6000</a>
     <!---------------Sección con fondo negro ------------------>
     <figure>
-      <h2>SOLUCIONES EFICACES PARA SU NEGOCIO</h2>
+      <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
       <button>Solicite nuestro servicio</button>
     </figure>
     <!-- --------------Ventajas del servicio ---------------->
@@ -45,16 +45,83 @@
       Usamos herramientas innovadoras para resolver las tareas asignadas. Es
       hora de simplificar los procesos laborales.
     </p>
-    <!--------------Sección a qué nos dedicamos -------------->
-
+    <!----------------A qué nos dedicamos ----------------->
+    <h2>A qué nos dedicamos</h2>
+    <img
+      src="images/rigthimage-after-squoosh.jpg"
+      alt="paleta de colores en tablet sobre mesa"
+      width="373.16"
+      height="323.7"
+    />
+    <img
+      src="images/centerimage-after-squoosh.jpg"
+      alt="celular y computador sobre mesa"
+      width="373.16"
+      height="323.7"
+    />
+    <img
+      src="images/leftimage-after-squoosh.jpg"
+      alt="tablet y teclado inhalambrico sobre mesa"
+      width="373.16"
+      height="323.7"
+    />
+    <!------------------Nuestro Equipo ------------------>
+    <h2>Nuestro Equipo</h2>
+    <figure>
+      <img
+        src="images/first-after-squoosh.jpg"
+        alt="andres cubo diseñador de productos"
+        width="270"
+        height="260"
+      />
+      <figcaption>
+        <p>Andres Cubo</p>
+        <p>Diseñador de Productos</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <img
+        src="images/second-after-squoosh.jpg"
+        alt="carla palacios desarrolladora front end"
+        width="270"
+        height="260"
+      />
+      <figcaption>
+        <p>Carla Palacios</p>
+        <p>Desarrolladora Front End</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <img
+        src="images/third-after-squoosh.jpg"
+        alt="mario dorado marketing"
+        width="270"
+        height="260"
+      />
+      <figcaption>
+        <p>Mario Dorado</p>
+        <p>Marketing</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <img
+        src="images/fourth-after-squoosh.jpg"
+        alt="pablo mijangos diseñador iu"
+        width="270"
+        height="260"
+      />
+      <figcaption>
+        <p>Pablo Mijangos</p>
+        <p>Diseñador IU</p>
+      </figcaption>
+    </figure>
     <!-- --------------Footer de la página ---------------->
   </main>
   <footer>
     <!--Referencias a las redes sociales, no nav -->
-    <h1>WebStudio</h1>
+    <a href=""><h3>WebStudio</h3></a>
+    <address>Calz. Ticomán 500, Ciudad de México,CDMX, México</address>
     <ul>
-      <li><a href="">Calz. Ticomán 500, Ciudad de</a></li>
-      <li><a href="">México, CDMX, México</a></li>
       <li><a href="">info@example.com</a></li>
       <li><a href="">+52 55 5529 6000</a></li>
     </ul>
