--- a/index.html
+++ b/index.html
@@ -7,123 +7,145 @@
     <title>Principal</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
-  <main>
-    <!----------------Barra de navegación ------------------>
+  <header>
+    <!--Barra de navegación-->
     <nav>
-      <a href=""><h3>WebStudio</h3></a>
-      <a href="">Estudio</a>
-      <a href="">Portafolio</a>
-      <a href="">Contactos</a>
+      <a href="#">WebStudio</a>
+      <a href="#">Estudio</a>
+      <a href="#">Portafolio</a>
+      <a href="#">Contactos</a>
     </nav>
-    <a href="">info@devstudio.com</a>
-    <a href="">+52 55 5529 6000</a>
-    <!---------------Sección con fondo negro ------------------>
-    <figure>
-      <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+    <a href="#">info@devstudio.com</a>
+    <a href="#">+52 55 5529 6000</a>
+  </header>
+  <main>
+    <!--Sección con fondo negro-->
+    <section>
+      <h1>Soluciones eficaces para su negocio</h1>
       <button>Solicite nuestro servicio</button>
-    </figure>
-    <!-- --------------Ventajas del servicio ---------------->
-    <h3>ATENCIÓN A LOS DETALLES</h3>
-    <p>
-      Nos adentraremos en todos los detalles y procesos de su negocio, para así
-      desarrollar una solución a su medida.
-    </p>
-    <h3>PUNTUALIDAD</h3>
-    <p>
-      Con nosotros, usted puede sentirse seguro y protegido. Un principio
-      importante de la empresa: respetar su tiempo y respetar los plazos
-      acordados.
-    </p>
-    <h3>PLANIFICACIÓN</h3>
-    <p>
-      Usted podrá observar y participar en cada fase del desarrollo y aplicación
-      de soluciones.
-    </p>
-    <h3>TECNOLOGÍA MODERNA</h3>
-    <p>
-      Usamos herramientas innovadoras para resolver las tareas asignadas. Es
-      hora de simplificar los procesos laborales.
-    </p>
-    <!----------------A qué nos dedicamos ----------------->
-    <h2>A qué nos dedicamos</h2>
-    <img
-      src="images/rigthimage-after-squoosh.jpg"
-      alt="paleta de colores en tablet sobre mesa"
-      width="373.16"
-      height="323.7"
-    />
-    <img
-      src="images/centerimage-after-squoosh.jpg"
-      alt="celular y computador sobre mesa"
-      width="373.16"
-      height="323.7"
-    />
-    <img
-      src="images/leftimage-after-squoosh.jpg"
-      alt="tablet y teclado inhalambrico sobre mesa"
-      width="373.16"
-      height="323.7"
-    />
-    <!------------------Nuestro Equipo ------------------>
-    <h2>Nuestro Equipo</h2>
-    <figure>
+    </section>
+    <!--Ventajas del servicio-->
+    <h2>hidden</h2>
+    <section>
+      <ul>
+        <li>
+          <h3>Atención a los detalles</h3>
+          <p>
+            Nos adentraremos en todos los detalles y procesos de su negocio,
+            para así desarrollar una solución a su medida.
+          </p>
+        </li>
+        <li>
+          <h3>Puntualidad</h3>
+          <p>
+            Con nosotros, usted puede sentirse seguro y protegido. Un principio
+            importante de la empresa: respetar su tiempo y respetar los plazos
+            acordados.
+          </p>
+        </li>
+        <li>
+          <h3>Planificación</h3>
+          <p>
+            Usted podrá observar y participar en cada fase del desarrollo y
+            aplicación de soluciones.
+          </p>
+        </li>
+        <li>
+          <h3>Tecnología moderna</h3>
+          <p>
+            Usamos herramientas innovadoras para resolver las tareas asignadas.
+            Es hora de simplificar los procesos laborales.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <!--A qué nos dedicamos-->
+    <section>
+      <h2>A qué nos dedicamos</h2>
+      <ul>
+        <li>
+          <img
+            src="images/rigthimage-after-squoosh.jpg"
+            alt="paleta de colores en tablet sobre mesa"
+            width="373"
+            height="323"
+          />
+        </li>
+        <li>
+          <img
+            src="images/centerimage-after-squoosh.jpg"
+            alt="celular y computador sobre mesa"
+            width="373"
+            height="323"
+          />
+        </li>
+        <li>
+          <img
+            src="images/leftimage-after-squoosh.jpg"
+            alt="tablet y teclado inhalambrico sobre mesa"
+            width="373"
+            height="323"
+          />
+        </li>
+      </ul>
+    </section>
+    <!--Nuestro Equipo-->
+    <section>
+      <h2>Nuestro Equipo</h2>
       <img
         src="images/first-after-squoosh.jpg"
         alt="andres cubo diseñador de productos"
         width="270"
         height="260"
       />
-      <figcaption>
-        <p>Andres Cubo</p>
-        <p>Diseñador de Productos</p>
-      </figcaption>
-    </figure>
-    <figure>
       <img
         src="images/second-after-squoosh.jpg"
         alt="carla palacios desarrolladora front end"
         width="270"
         height="260"
       />
-      <figcaption>
-        <p>Carla Palacios</p>
-        <p>Desarrolladora Front End</p>
-      </figcaption>
-    </figure>
-    <figure>
       <img
         src="images/third-after-squoosh.jpg"
         alt="mario dorado marketing"
         width="270"
         height="260"
       />
-      <figcaption>
-        <p>Mario Dorado</p>
-        <p>Marketing</p>
-      </figcaption>
-    </figure>
-    <figure>
       <img
         src="images/fourth-after-squoosh.jpg"
         alt="pablo mijangos diseñador iu"
         width="270"
         height="260"
       />
-      <figcaption>
-        <p>Pablo Mijangos</p>
-        <p>Diseñador IU</p>
-      </figcaption>
-    </figure>
-    <!-- --------------Footer de la página ---------------->
+      <ul>
+        <li>
+          <h3>Andres Cubo</h3>
+          <p>Diseñador de Productos</p>
+        </li>
+        <li>
+          <h3>Carla Palacios</h3>
+          <p>Desarrolladora Front End</p>
+        </li>
+        <li>
+          <h3>Mario Dorado</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <h3>Pablo Mijangos</h3>
+          <p>Diseñador IU</p>
+        </li>
+      </ul>
+    </section>
+    <!--Footer de la página-->
   </main>
   <footer>
     <!--Referencias a las redes sociales, no nav -->
-    <a href=""><h3>WebStudio</h3></a>
-    <address>Calz. Ticomán 500, Ciudad de México,CDMX, México</address>
+    <a href="#">WebStudio</a>
     <ul>
-      <li><a href="">info@example.com</a></li>
-      <li><a href="">+52 55 5529 6000</a></li>
+      <li>
+        <address>Calz. Ticomán 500, Ciudad de México,CDMX, México</address>
+      </li>
+      <li><a href="#">info@example.com</a></li>
+      <li><a href="#">+52 55 5529 6000</a></li>
     </ul>
   </footer>
 </html>
