--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <!--Barra de navegación-->
     <nav>
       <a href="#">WebStudio</a>
-      <a href="#">Estudio</a>
-      <a href="#">Portafolio</a>
-      <a href="#">Contactos</a>
+      <ul>
+        <li><a href="#">Estudio</a></li>
+        <li><a href="#">Portafolio</a></li>
+        <li><a href="#">Contactos</a></li>
+      </ul>
     </nav>
-    <a href="#">info@devstudio.com</a>
-    <a href="#">+52 55 5529 6000</a>
+    <ul>
+      <li><a href="#">info@devstudio.com</a></li>
+      <li><a href="#">+52 55 5529 6000</a></li>
+    </ul>
   </header>
   <main>
     <!--Sección con fondo negro-->
@@ -25,7 +29,7 @@
       <button>Solicite nuestro servicio</button>
     </section>
     <!--Ventajas del servicio-->
-    <h2>hidden</h2>
+    <h2 hidden>Nuestras ventajas</h2>
     <section>
       <ul>
         <li>
@@ -100,6 +104,8 @@
             width="270"
             height="260"
           />
+          <h3>Andres Cubo</h3>
+          <p>Diseñador de Productos</p>
         </li>
         <li>
           <img
@@ -108,6 +114,8 @@
             width="270"
             height="260"
           />
+          <h3>Carla Palacios</h3>
+          <p>Desarrolladora Front End</p>
         </li>
         <li>
           <img
@@ -116,6 +124,8 @@
             width="270"
             height="260"
           />
+          <h3>Mario Dorado</h3>
+          <p>Marketing</p>
         </li>
         <li>
           <img
@@ -124,22 +134,6 @@
             width="270"
             height="260"
           />
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <h3>Andres Cubo</h3>
-          <p>Diseñador de Productos</p>
-        </li>
-        <li>
-          <h3>Carla Palacios</h3>
-          <p>Desarrolladora Front End</p>
-        </li>
-        <li>
-          <h3>Mario Dorado</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
           <h3>Pablo Mijangos</h3>
           <p>Diseñador IU</p>
         </li>
@@ -150,12 +144,14 @@
   <footer>
     <!--Referencias a las redes sociales, no nav -->
     <a href="#">WebStudio</a>
-    <ul>
-      <li>
-        <address>Calz. Ticomán 500, Ciudad de México,CDMX, México</address>
-      </li>
-      <li><a href="#">info@example.com</a></li>
-      <li><a href="#">+52 55 5529 6000</a></li>
-    </ul>
+    <address>
+      <ul>
+        <li>
+          <a href="#">Calz. Ticomán 500, Ciudad de México,CDMX, México</a>
+        </li>
+        <li><a href="#">info@example.com</a></li>
+        <li><a href="#">+52 55 5529 6000</a></li>
+      </ul>
+    </address>
   </footer>
 </html>
